--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,11 @@
         android:layout_height="wrap_content"
         android:text="Start" />
 
+    <TextView
+        android:id="@+id/scanResults"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Waiting..." />
 
 
 </LinearLayout>
