--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,33 +12,28 @@
         android:id="@+id/contactsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Exposure today: 0"
-        tools:textSize="24sp" />
+        android:text="Today's exposure score: 0"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/scanResults"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Waiting..." />
+        android:text="Waiting..."
+        android:visibility="gone" />
 
     <WebView
         android:id="@+id/chartView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
+    </WebView>
+
+    <Button
+        android:id="@+id/settingsButton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/settingsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Settings"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="349dp" />
-
-    </android.support.constraint.ConstraintLayout>
-
-
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="349dp" />
 </LinearLayout>
