--- a/app/src/main/res/layout/activity_privacy_setup.xml
+++ b/app/src/main/res/layout/activity_privacy_setup.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:text='ContactApp will learn which Bluetooth devices should not be counted as contacts (i.e. devices that belong to you or your family members). Go to each room where you live and press the "Add to ignore list" button to add these devices. ' />
+            android:text='ContactApp will learn which Bluetooth devices should not be counted as contacts (i.e. devices that belong to you or your family members). Press the "add to ingore list" button and then walk around your house or office. ' />
 
         <Button
             android:id="@+id/ignorebutton"
