--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,6 +37,12 @@
         android:layout_height="wrap_content"
         android:text="Reset ignored devices" />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -48,5 +54,6 @@
             android:text="Exit Settings"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="294dp" />
+
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
